- after changing into lyrics mode, the lyrics for the first song were not
  automatically loaded from the internet
- fix image modes TV and Black: They also showed the cover image
- add italian translation, contributed by Diego Pierotto
- fix off by one error when selecting tracks in play mode by using number keys,
found by Thomas Balke
- DisplayMode is now configurable, found by Thomas Balke. This defines between
how many different types of information the first line toggles in the player.
- README.mysql was incomplete
- Mysql only: Fix order of insertion into empty playlist. Found by Thomas
Balke.
- update README.* about MySQL with utf8
- importing subdirectories with mugglei: sorting by folder did not work for
  those tracks. Found by Thomas Balke.
- fix bug #32 reported by Anonymous: mugglei will not run from a linked subfolder
- when checking if we are in or under the top level dictory, no longer translate
  current path to realpath - always go through all symlinks. Fixes bug fix for
  bug #32, reported by Thomas. Hoping this does not break other configurations.
- when destroying the OSD object, save muggle state. Fixes bug #37 reported by
  Thomas
- updated translations by Ville Skyttä and Diego Pierotto

2009-XX-XX Version 0.2.3
- last version broke importing from setup menu
- Lyrics now work with Googlyrics2
- if several versions of lyrics for a song are found, it is now possible
  to choose among them. 
- Lyrics: rewrite the shell script muggle_getlyrics in python and talk 
  directly to the Googlyrics2 python code
- load images: fix buggy error handling (reported in vdr-portal.de by stevie101)
- Lyrics: Fix bug #52: line split could split within 2byte unicode char. Now
  removed this code from C++ and put it into the python script muggle_getlyrics.
- Lyrics: when calling "mv" to rename a file make sure mv never gets interactive
- muggle-image-convert produces less output if needed programs are not installed